# cpp-swig-java-clj

./: README  clean-compile  compile  fact.i  project.clj  runme.java  screen_cfg  start-swank  stuff.h
src/: CMakeLists.txt
src/clj/: debug.clj
src/clj/one/: core.clj  debug.clj  hermite.clj  stencil.clj  tfi.clj
src/clj/one/symbolic/: expr.clj
src/cpp/: CMakeLists.txt  stuff.cpp  stuff.h
src/cpp/callback/: CMakeLists.txt  CMakeLists.txt~  example.h  example.i  runme.java
src/cpp/class/: CMakeLists.txt  example.i  runme.java
src/cpp/constants/: CMakeLists.txt  example.i  runme.java
src/cpp/enum/: CMakeLists.txt  example.i  runme.java
src/cpp/extend/: CMakeLists.txt  example.i  runme.java
src/cpp/funcptr/: CMakeLists.txt  example.i  runme.java
src/cpp/jclass/: CMakeLists.txt  example.i  runme.java
src/cpp/jenum/: CMakeLists.txt  example.i  runme.java
src/cpp/jnative/: CMakeLists.txt  example.i  runme.java  runme.java~
src/cpp/jtemplate/: CMakeLists.txt  example.i  runme.java
src/cpp/misc_utils/: CMakeLists.txt  misc_utils.cpp  misc_utils.hpp
src/cpp/multimap/: CMakeLists.txt  example.i  runme.java
src/cpp/native/: CMakeLists.txt  example.i
src/cpp/pointer/: CMakeLists.txt  example.i  runme.java
src/cpp/reference/: CMakeLists.txt  example.i  runme.java
src/cpp/simple/: CMakeLists.txt  example.i  runme.java
src/cpp/stuff/: CMakeLists.txt  misc_utils.hpp  stuff.cpp  stuff.hpp
src/cpp/typemap/: CMakeLists.txt  example.i  runme.java
src/cpp/variables/: CMakeLists.txt  example.i  runme.java
src/java/: CMakeLists.txt  runme.java
src/swig_files/: CMakeLists.txt  fact.i  misc_utils.i
test/clj/one/: hermite_test.clj  tfi_test.clj
test/clj/one/symbolic/: expr_test.clj
test/one/test/: core.clj
