cmake_minimum_required(VERSION 2.6)
project(swig_java)
set(CPP_SOURCES "")
set(CPP_INCLUDE_DIRS "")
set(JAVA_SOURCES "")
set(SWIG_INTERFACE_FILES "")

add_subdirectory(swig_files)
add_subdirectory(cpp)
add_subdirectory(java)

message("CPP_SOURCES : '${CPP_SOURCES}'")
message("CPP_INCLUDE_DIRS : '${CPP_INCLUDE_DIRS}'")
message("JAVA_SOURCES : '${JAVA_SOURCES}'")
message("SWIG_INTERFACE_FILES : '${SWIG_INTERFACE_FILES}'")

find_package(SWIG REQUIRED)
include(${SWIG_USE_FILE}) 
find_package(JNI REQUIRED) 
include_directories(${CPP_INCLUDE_DIRS} ${JNI_INCLUDE_DIRS})
set(CMAKE_CXX_FLAGS "-fPIC")
add_library(cpp_lib ${CPP_SOURCES})

set(CMAKE_SWIG_FLAGS "")                                                                                                                 
set(CMAKE_SWIG_OUTDIR "${PROJECT_SOURCE_DIR}/../gen_java_src")                                                                               
set_source_files_properties(example.i PROPERTIES CPLUSPLUS ON)
set_source_files_properties(example.i PROPERTIES SWIG_FLAGS "-package callback")
set_source_files_properties(example.i PROPERTIES SWIG_OUTDIR ${CMAKE_SWIG_OUTDIR}/callback)
swig_add_module(java_interop java example.i) 
swig_link_libraries(java_interop ${JNI_LIBRARIES} cpp_lib)
install(TARGETS java_interop DESTINATION ${CMAKE_SOURCE_DIR}/../cpp_lib)

