FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
FIND_PACKAGE(JNI REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(CMAKE_SWIG_FLAGS "")
SET(CMAKE_SWIG_OUTDIR "${PROJECT_SOURCE_DIR}/../gen_java_src")
SET_SOURCE_FILES_PROPERTIES(fact.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(fact.i PROPERTIES SWIG_FLAGS "-includeall")
include_directories(${JNI_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/cpp)
SWIG_ADD_MODULE(misc_utils java fact.i)
SWIG_LINK_LIBRARIES(misc_utils ${JNI_LIBRARIES} ${wrapper} cpp)
install(TARGETS wrapper DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_lib)
